--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 
   <script>
     // The value below is injected by flutter build, do not touch.
-    // const serviceWorkerVersion = "864095954";
+    
+    var serviceWorkerVersion = "848638061";
   </script>
   <!-- This script adds the flutter initialization JS code -->
   <script src="flutter.js" defer></script>
